<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item android:id="@+id/nav_item_name"
            android:icon="@drawable/ic_person"
            android:title="Nome" />
        <item android:id="@+id/nav_item_cognome"
            android:icon="@drawable/ic_person"
            android:title="Cognome" />
        <item android:id="@+id/nav_item_mail"
            android:icon="@drawable/ic_mail"
            android:title="Email" />

    </group>
    <item
        android:id="@+id/itemfun"
        android:title="Funzionalità">
        <menu>
            <item
                android:id="@+id/nav_item_search"
                android:icon="@drawable/ic_image_search_24"
                android:onClick="avviaRiconoscimento"
                android:title="Avvia riconoscimento facciale" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_person"
                android:onClick="logout"
                android:orderInCategory="100"
                android:title="Logout"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>