<resources>
    <string name="app_name">PlacesOfInterest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (min 6 char)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
...
    <string name="dialog_title">Scegli foto</string>
    <string name="UtenteGiaregistrato">Utente già registrato</string>
    <string name="UtenteNonregistrato">Utente non registrato</string>
    <string name="FotoNonAggiunta">Foto non aggiunta</string>
    <string name="selezionaFoto">Scegli foto da :</string>
    <string name="NuovoPost">  Nuovo post</string>
    <string name="Ok">OK</string>

</resources>

