...
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>


    <ListView
        android:id="@+id/PostList1"
        android:layout_width="360dp"
        android:layout_height="630dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
